--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -610,15 +610,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per month</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "UserTable" (username, password, email, name, gender, address,institution, description, birthDate, idCountry) VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "UserTable" (username, password, email, name, gender, address,institution, description, birthDate, idCountry)
+VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);
+```
+
 
 <table>
   <tbody>
@@ -634,15 +633,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per month</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Project"(creationDate, name, description, private, idForum) VALUES ($creationDate, $name, $description, $private, $idForum);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Project"(creationDate, name, description, private, idForum)
+VALUES ($creationDate, $name, $description, $private, $idForum);
+```
 
 <table>
   <tbody>
@@ -658,15 +655,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per month</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Task"(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject) VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $completed, $completedDate, $idUser, $idProject);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Task"(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject)
+VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $completed, $completedDate, $idUser, $idProject);
+```
 
 <table>
   <tbody>
@@ -682,15 +677,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Comment"(creationDate, lastEditDate, content, idTask, idUser, idComment) VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Comment"(creationDate, lastEditDate, content, idTask, idUser, idComment)
+VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);
+```
 
 <table>
   <tbody>
@@ -706,15 +699,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "PremiumSignature"(startDate, duration, idUser) VALUES ($startDate, $duration, $idUser);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "PremiumSignature"(startDate, duration, idUser)
+VALUES ($startDate, $duration, $idUser);
+```
 
 <table>
   <tbody>
@@ -730,15 +721,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "ForumPost"(creationDate, lastEditDate, title, content, idForum, idUser) VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "ForumPost"(creationDate, lastEditDate, title, content, idForum, idUser)
+VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);
+```
 
 <table>
   <tbody>
@@ -754,15 +743,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Admin"(username, password, email) VALUES ($username, $password, $email);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Admin"(username, password, email)
+VALUES ($username, $password, $email);
+```
 
 <table>
   <tbody>
@@ -778,15 +765,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Assigned"(idUser, idTask) VALUES ($idUser, $idTask);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Assigned"(idUser, idTask)
+VALUES ($idUser, $idTask);
+```
 
 <table>
   <tbody>
@@ -802,15 +787,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per week</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "CloseRequest"(creationDate, title, description, approved, idUser, idTask) VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "CloseRequest"(creationDate, title, description, approved, idUser, idTask)
+VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);
+```
 
 <table>
   <tbody>
@@ -826,15 +809,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per week</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Reply"( creationDate, lastEditDate, content, idPost, idUser) VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Reply"( creationDate, lastEditDate, content, idPost, idUser)
+VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);
+```
 
 <table>
   <tbody>
@@ -850,15 +831,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Dozens per week</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          INSERT INTO "Joined"(idUser, idProject, joinedDate, role) VALUES ($idUser, $idProject, $joinedDate, $role);
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+INSERT INTO "Joined"(idUser, idProject, joinedDate, role)
+VALUES ($idUser, $idProject, $joinedDate, $role);
+```
 
 <table>
   <tbody>
@@ -874,17 +853,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per week</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "UserTable"
-            SET password = $password, email = $email, premium  = $premium, banned = $banned, name = $name, gender = $gender, address = $address, institution = $institution, description = $description, birthDate = $birthDate
-            WHERE idUser = $idUser;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+UPDATE "UserTable"
+  SET password = $password, email = $email, premium  = $premium, banned = $banned, name = $name, gender = $gender, address = $address, institution = $institution, description = $description, birthDate = $birthDate
+  WHERE idUser = $idUser;
+```
 
 <table>
   <tbody>
@@ -900,17 +876,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per week</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "Project"
-            SET name = $name, description = $description, private = $private
-            WHERE idProject = $idProject;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+UPDATE "Project"
+  SET name = $name, description = $description, private = $private
+  WHERE idProject = $idProject;
+```
 
 <table>
   <tbody>
@@ -926,17 +899,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "ForumPost"
-            SET lastEditDate = $lastEditDate, title = $title, content = $content
-            WHERE idPost = $idPost;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+UPDATE "ForumPost"
+  SET lastEditDate = $lastEditDate, title = $title, content = $content
+  WHERE idPost = $idPost;
+```
 
 <table>
   <tbody>
@@ -952,17 +922,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "Comment"
-            SET lastEditDate = $lastEditDate, content = $content
-            WHERE idComment = $idComment;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+UPDATE "Comment"
+  SET lastEditDate = $lastEditDate, content = $content
+  WHERE idComment = $idComment;
+```
 
 <table>
   <tbody>
@@ -978,17 +945,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "Task"
-            SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed, completionDate = $completionDate
-            WHERE idTask = $idTask;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+UPDATE "Task"
+  SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed, completionDate = $completionDate
+  WHERE idTask = $idTask;
+```
 
 <table>
   <tbody>
@@ -1004,17 +968,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "CloseRequest"
-            SET title = $title, description = $description, approved = $approved
-            WHERE idRequest = $idRequest;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+UPDATE "CloseRequest"
+  SET title = $title, description = $description, approved = $approved
+  WHERE idRequest = $idRequest;
+```
 
 <table>
   <tbody>
@@ -1030,18 +991,14 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          UPDATE "Admin"
-            SET password = $password, email = $email
-            WHERE idAdmin = $idAdmin;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
 
+```SQL
+UPDATE "Admin"
+  SET password = $password, email = $email
+  WHERE idAdmin = $idAdmin;
+```
 
 <table>
   <tbody>
@@ -1057,16 +1014,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          DELETE FROM Task
-          WHERE idTask = $idTask;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+DELETE FROM Task
+WHERE idTask = $idTask;
+```
 
 <table>
   <tbody>
@@ -1082,16 +1036,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          DELETE FROM Comment
-          WHERE idComment = $idComment;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+DELETE FROM Comment
+WHERE idComment = $idComment;
+```
 
 <table>
   <tbody>
@@ -1107,16 +1058,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          DELETE FROM Project
-          WHERE idProject = $idProject;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+DELETE FROM Project
+WHERE idProject = $idProject;
+```
 
 <table>
   <tbody>
@@ -1132,16 +1080,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          DELETE FROM ForumPost
-          WHERE idPost = $idPost;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+DELETE FROM ForumPost
+WHERE idPost = $idPost;
+```
 
 <table>
   <tbody>
@@ -1157,16 +1102,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          DELETE FROM Reply
-          WHERE idReply = $idReply;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+DELETE FROM Reply
+WHERE idReply = $idReply;
+```
 
 <table>
   <tbody>
@@ -1182,17 +1124,13 @@ This artefact contains the physical schema of the database, the identification a
       <td><b>Query frequency</b></td>
       <td>Once per day</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-         DELETE FROM User
-         WHERE idUser = $idUser;
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
 
+```SQL
+DELETE FROM User
+WHERE idUser = $idUser;
+```
 
 ## 2. Proposed Indices
 ### 2.1. Performance Indices
