--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -614,7 +614,7 @@ This artefact contains the physical schema of the database, the identification a
 </table>
 
 ```SQL
-INSERT INTO "UserTable" (username, password, email, name, gender, address,institution, description, birthDate, idCountry)
+INSERT INTO UserTable (username, password, email, name, gender, address,institution, description, birthDate, idCountry)
 VALUES ($username, $password, $email, $name, $gender, $address, $institution, $description, $birthDate, $idCountry);
 ```
 
@@ -637,7 +637,7 @@ VALUES ($username, $password, $email, $name, $gender, $address, $institution, $d
 </table>
 
 ```SQL
-INSERT INTO "Project"(creationDate, name, description, private, idForum)
+INSERT INTO Project(creationDate, name, description, private, idForum)
 VALUES ($creationDate, $name, $description, $private, $idForum);
 ```
 
@@ -659,7 +659,7 @@ VALUES ($creationDate, $name, $description, $private, $idForum);
 </table>
 
 ```SQL
-INSERT INTO "Task"(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject)
+INSERT INTO Task(creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject)
 VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $completed, $completedDate, $idUser, $idProject);
 ```
 
@@ -681,7 +681,7 @@ VALUES ($creationDate, $lastEditDate, $title, $description, $deadline, $complete
 </table>
 
 ```SQL
-INSERT INTO "Comment"(creationDate, lastEditDate, content, idTask, idUser, idComment)
+INSERT INTO Comment(creationDate, lastEditDate, content, idTask, idUser, idComment)
 VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);
 ```
 
@@ -703,7 +703,7 @@ VALUES ($creationDate, $lastEditDate, $content, $idTask, $idUser, $idComment);
 </table>
 
 ```SQL
-INSERT INTO "PremiumSignature"(startDate, duration, idUser)
+INSERT INTO PremiumSignature(startDate, duration, idUser)
 VALUES ($startDate, $duration, $idUser);
 ```
 
@@ -725,7 +725,7 @@ VALUES ($startDate, $duration, $idUser);
 </table>
 
 ```SQL
-INSERT INTO "ForumPost"(creationDate, lastEditDate, title, content, idForum, idUser)
+INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idForum, idUser)
 VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);
 ```
 
@@ -747,7 +747,7 @@ VALUES ($creationDate, $lastEditDate, $title, $content, $idForum, $idUser);
 </table>
 
 ```SQL
-INSERT INTO "Admin"(username, password, email)
+INSERT INTO Admin(username, password, email)
 VALUES ($username, $password, $email);
 ```
 
@@ -769,7 +769,7 @@ VALUES ($username, $password, $email);
 </table>
 
 ```SQL
-INSERT INTO "Assigned"(idUser, idTask)
+INSERT INTO Assigned(idUser, idTask)
 VALUES ($idUser, $idTask);
 ```
 
@@ -791,7 +791,7 @@ VALUES ($idUser, $idTask);
 </table>
 
 ```SQL
-INSERT INTO "CloseRequest"(creationDate, title, description, approved, idUser, idTask)
+INSERT INTO CloseRequest(creationDate, title, description, approved, idUser, idTask)
 VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);
 ```
 
@@ -813,7 +813,7 @@ VALUES ($creationDate, $title, $description, $approved, $idUser, $idTask);
 </table>
 
 ```SQL
-INSERT INTO "Reply"( creationDate, lastEditDate, content, idPost, idUser)
+INSERT INTO Reply( creationDate, lastEditDate, content, idPost, idUser)
 VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);
 ```
 
@@ -835,7 +835,7 @@ VALUES ($creationDate, $lastEditDate, $content, $idPost, $idUser);
 </table>
 
 ```SQL
-INSERT INTO "Joined"(idUser, idProject, joinedDate, role)
+INSERT INTO Joined(idUser, idProject, joinedDate, role)
 VALUES ($idUser, $idProject, $joinedDate, $role);
 ```
 
@@ -857,7 +857,7 @@ VALUES ($idUser, $idProject, $joinedDate, $role);
 </table>
 
 ```SQL
-UPDATE "UserTable"
+UPDATE UserTable
   SET password = $password, email = $email, premium  = $premium, banned = $banned, name = $name, gender = $gender, address = $address, institution = $institution, description = $description, birthDate = $birthDate
   WHERE idUser = $idUser;
 ```
@@ -880,7 +880,7 @@ UPDATE "UserTable"
 </table>
 
 ```SQL
-UPDATE "Project"
+UPDATE Project
   SET name = $name, description = $description, private = $private
   WHERE idProject = $idProject;
 ```
@@ -903,7 +903,7 @@ UPDATE "Project"
 </table>
 
 ```SQL
-UPDATE "ForumPost"
+UPDATE ForumPost
   SET lastEditDate = $lastEditDate, title = $title, content = $content
   WHERE idPost = $idPost;
 ```
@@ -926,7 +926,7 @@ UPDATE "ForumPost"
 </table>
 
 ```SQL
-UPDATE "Comment"
+UPDATE Comment
   SET lastEditDate = $lastEditDate, content = $content
   WHERE idComment = $idComment;
 ```
@@ -949,7 +949,7 @@ UPDATE "Comment"
 </table>
 
 ```SQL
-UPDATE "Task"
+UPDATE Task
   SET lastEditDate = $lastEditDate, title = $title, description = $description, deadline = $deadline, completed = $completed, completionDate = $completionDate
   WHERE idTask = $idTask;
 ```
@@ -972,7 +972,7 @@ UPDATE "Task"
 </table>
 
 ```SQL
-UPDATE "CloseRequest"
+UPDATE CloseRequest
   SET title = $title, description = $description, approved = $approved
   WHERE idRequest = $idRequest;
 ```
@@ -995,7 +995,7 @@ UPDATE "CloseRequest"
 </table>
 
 ```SQL
-UPDATE "Admin"
+UPDATE Admin
   SET password = $password, email = $email
   WHERE idAdmin = $idAdmin;
 ```
@@ -1175,8 +1175,10 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
+	```SQL
           CREATE INDEX emailUser ON "UserTable" USING hash (email);
-        </code>
+        ```
+	</code>
       </td>
     </tr>
   </tbody>
@@ -1221,8 +1223,10 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
+	```SQL
            CREATE INDEX taskUser ON Task USING hash(idUser); 
-        </code>
+        ```
+	</code>
       </td>
     </tr>
   </tbody>
@@ -1267,8 +1271,10 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
+	```SQL
            CREATE INDEX projectUser ON Project USING hash(idUser); 
-        </code>
+        ```
+	</code>
       </td>
     </tr>
   </tbody>
@@ -1313,8 +1319,10 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
+	```SQL
            CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);  
-        </code>
+        ```
+	</code>
       </td>
     </tr>
   </tbody>
