--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1352,15 +1352,12 @@ WHERE idUser = $idUser;
       <td><b>Justification</b></td>
       <td>To improve performance of full text search while searching for usernames; GIN because usernames never changes.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE INDEX search_username ON User USING GIN (to_tsvector('english', username));
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX search_username ON User USING GIN (to_tsvector('english', username));
+```
 
 <table>
   <tbody>
@@ -1392,15 +1389,12 @@ WHERE idUser = $idUser;
       <td><b>Justification</b></td>
       <td>To improve performance of full text search while searching for user full names; GIN because updates in user full names are rare.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE INDEX search_user_name ON User USING GIN (to_tsvector('english', name));
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX search_user_name ON User USING GIN (to_tsvector('english', name));
+```
 
 <table>
   <tbody>
@@ -1432,15 +1426,12 @@ WHERE idUser = $idUser;
       <td><b>Justification</b></td>
       <td>To improve performance of full text search while searching for project names; GIN because updates in the project name are rare.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name));
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX search_project_name ON Project USING GIN (to_tsvector('english', name));
+```
 
 <table>
   <tbody>
@@ -1472,15 +1463,12 @@ WHERE idUser = $idUser;
       <td><b>Justification</b></td>
       <td>To improve performance of full text search while searching for project names; GisT because the project description is dynamic.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          	CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description));
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('english', description));
+```
 
 <table>
   <tbody>
@@ -1512,15 +1500,12 @@ WHERE idUser = $idUser;
       <td><b>Justification</b></td>
       <td>To improve performance of full text search while searching for tasks; GIN because the updates in the task name are rare.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
+```
 
 <table>
   <tbody>
@@ -1552,15 +1537,12 @@ WHERE idUser = $idUser;
       <td><b>Justification</b></td>
       <td>To improve performance of full text search while searching for tasks; GisT because the task description is dynamic.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', name))
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', name));
+```
 
 ## 3. Triggers
 
