--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1364,7 +1364,7 @@ WHERE idUser = $idUser;
 </table>
 
 ```SQL
-CREATE INDEX search_username ON User USING GIN (to_tsvector('english', username));
+CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', username));
 ```
 
 <table>
