Triggers :gem: :thinking:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1216,15 +1216,15 @@ WHERE idUser = $idUser;
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td> Table is very large; SELECT03, used to search an users tasks, has to be fast because it's executed many times; 
-	      doesn't need range query support; 
+      <td> Table is very large; SELECT03, used to search an users tasks, has to be fast because it's executed many times;
+	      doesn't need range query support;
 	      cardinality is medium so it's a good candidate for clustering.</td>
     </tr>
     <tr>
       <td colspan="2">
         <code>
 	```SQL
-           CREATE INDEX taskUser ON Task USING hash(idUser); 
+           CREATE INDEX taskUser ON Task USING hash(idUser);
         ```
 	</code>
       </td>
@@ -1264,15 +1264,15 @@ WHERE idUser = $idUser;
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td> SELECT03, used to search an users tasks, has to be fast because it's executed several times; 
-	      doesn't need range query support; 
+      <td> SELECT03, used to search an users tasks, has to be fast because it's executed several times;
+	      doesn't need range query support;
 	      cardinality is medium therefor it's a good candidate for clustering.</td>
     </tr>
     <tr>
       <td colspan="2">
         <code>
 	```SQL
-           CREATE INDEX projectUser ON Project USING hash(idUser); 
+           CREATE INDEX projectUser ON Project USING hash(idUser);
         ```
 	</code>
       </td>
@@ -1312,8 +1312,8 @@ WHERE idUser = $idUser;
     </tr>
     <tr>
       <td><b>Justification</b></td>
-      <td> To allow searching tasks by deadline faster; 
-	      It's clustered to allow for quick range queries; 
+      <td> To allow searching tasks by deadline faster;
+	      It's clustered to allow for quick range queries;
 	      cardinality is medium.</td>
     </tr>
     <tr>
@@ -1564,35 +1564,28 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can create Posts in it's Forum</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION insertPost() RETURNS TRIGGER AS
-          $BODY$
-          BEGIN
-            IF NOT EXISTS (
-              SELECT Joined.idJoined FROM Joined
-              WHERE (new.idUser = idUser AND new.idProject = idProject))
-            THEN
-              RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
-            ELSE
-              INSERT INTO ForumPost(creationDate, lastEditDate, title, content, idProject, idUser)
-              VALUES (new.creationDate, new.lastEditDate, new.title, new.content, new.idProject, new.idUser);
-            END IF;
-            RETURN NEW;
-          END
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
-          FOR EACH ROW
-          EXECUTE PROCEDURE plenum.insertPost();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.insertPost() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined
+      WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can post in its forum.';
+    END IF;
+    RETURN NEW;
+  END
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreatePost BEFORE INSERT ON plenum.ForumPost
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertPost();
+```
 
 <table>
   <tbody>
@@ -1604,35 +1597,28 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can Reply in it's Forum</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-              IF NOT EXISTS (
-                SELECT idJoined FROM plenum.Joined, plenum.ForumPost
-                WHERE (new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser))
-              THEN
-                RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
-              ELSE
-                INSERT INTO plenum.Reply(creationDate, lastEditDate, content, idPost, idUser)
-                VALUES (new.creationDate, new.lastEditDate, new.content, new.idPost, new.idUser);
-              END IF;
-              RETURN NEW;
-            END
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
-          FOR EACH ROW
-          EXECUTE PROCEDURE plenum.insertReply();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined, plenum.ForumPost
+      WHERE new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
+    END IF;
+    RETURN NEW;
+  END
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertReply();
+```
 
 <table>
   <tbody>
@@ -1644,35 +1630,28 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>Only a user who has Joined a Project can create Comments for a Project Task</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-              IF NOT EXISTS (
-                SELECT idJoined FROM plenum.Joined, plenum.Task
-                WHERE (new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser))
-              THEN
-                RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
-              ELSE
-                INSERT INTO plenum.Comment(creationDate, lastEditDate, idTask, idUser, idParent)
-                VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
-              END IF;
-              RETURN NEW;
-            END;
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
-          FOR EACH ROW
-          EXECUTE PROCEDURE plenum.insertComent();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined, plenum.Task
+      WHERE new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertComent();
+```
 
 <table>
   <tbody>
@@ -1684,30 +1663,28 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>Only a User who was Assigned to a Task can create a Close Request for it.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-              IF NOT EXISTS (
-                SELECT * FROM plenum.Assigned
-                WHERE (new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser))
-              THEN
-                RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
-              ELSE
-                INSERT INTO plenum.Comment(creationDate, lastEditDate, idTask, idUser, idParent)
-                VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
-              END IF
-          CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
-          FOR EACH ROW
-          EXECUTE PROCEDURE plenum.insertCloseRequest();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Assigned
+      WHERE new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertCloseRequest();
+```
 
 <table>
   <tbody>
@@ -1719,35 +1696,28 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can create Tasks for It.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-              IF NOT EXISTS (
-                SELECT Joined.idJoined FROM plenum.Joined
-                WHERE (new.idUser = Joined.idUser AND new.idProject = Joined.idProject))
-              THEN
-                RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
-              ELSE
-                INSERT INTO plenum.Task(creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject)
-                VALUES (new.creationDate, new.lastEditDate, new.title, new.description, new.deadline, new.completed, new.completetionDate, new.idUser, new.idProject);
-              END IF;
-              RETURN NEW;
-            END;
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
-          FOR EACH ROW
-          EXECUTE PROCEDURE plenum.insertTask();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined
+      WHERE new.idUser = Joined.idUser AND new.idProject = Joined.idProject)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertTask();
+```
 
 <table>
   <tbody>
@@ -1759,35 +1729,28 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>Only a User who Joined a Project can be assigned to it's Tasks.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-              IF NOT EXISTS (
-                SELECT Joined.idJoined FROM plenum.Joined, plenum.Task
-                WHERE (new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject))
-              THEN
-                RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
-              ELSE
-                INSERT INTO plenum.Assigned(idUser, idTask)
-                VALUES (new.idUser, new.idTask);
-              END IF;
-              RETURN NEW;
-            END;
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
-          FOR EACH ROW
-          EXECUTE PROCEDURE plenum.insertAssigned();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+    IF NOT EXISTS (
+      SELECT * FROM plenum.Joined, plenum.Task
+      WHERE new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject)
+    THEN
+      RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
+    END IF;
+    RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
+FOR EACH ROW
+EXECUTE PROCEDURE plenum.insertAssigned();
+```
 
 <table>
   <tbody>
@@ -1799,36 +1762,29 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>A Project can only be private while the Owner is a premium User.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-            IF NOT EXISTS (
-              SELECT * FROM plenum.Joined, plenum.UserTable
-              WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
-            THEN
-              RAISE EXCEPTION 'A Project can only be private while the Owner is a premium User.';
-            ELSE
-              INSERT INTO plenum.Project(idProject, creationDate, name, description, private)
-              VALUES (new.idProject, new.creationDate, new.name, new.description, new.private);
-            END IF;
-            RETURN NEW;
-            END;
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onCreateProject BEFORE INSERT OR UPDATE ON plenum.Project
-          FOR EACH ROW
-          WHEN (NEW.private IS TRUE)
-          EXECUTE PROCEDURE plenum.canProjectBePrivate();
-
-        </code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+  IF NOT EXISTS (
+    SELECT * FROM plenum.Joined, plenum.UserTable
+    WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
+  THEN
+    RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
+  END IF;
+  RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateProject BEFORE UPDATE ON plenum.Project
+FOR EACH ROW
+WHEN (NEW.private IS TRUE)
+EXECUTE PROCEDURE plenum.canProjectBePrivate();
+```
 
 <table>
   <tbody>
@@ -1840,37 +1796,63 @@ CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', 
       <td><b>Trigger description</b></td>
       <td>A Project can only be private while the Owner is a premium User.</td>
     </tr>
+  </tbody>
+</table>
+
+```SQL
+CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+  IF EXISTS (
+    SELECT * FROM plenum.Joined, plenum.Project
+    WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND Project.idProject = Joined.idProject AND Project.private = true)
+  THEN
+    RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
+  END IF;
+  RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onUpdateUser BEFORE UPDATE ON plenum.UserTable
+FOR EACH ROW
+WHEN (new.premium = false)
+EXECUTE PROCEDURE plenum.updateUserTable();
+```
+
+<table>
+  <tbody>
     <tr>
-      <td colspan="2">
-        <code>
-          CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
-          $BODY$
-            BEGIN
-            IF EXISTS (
-              SELECT * FROM plenum.Joined, plenum.Project
-              WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND new.idProject = Joined.idProject AND new.idProject = Project.idProject AND Project.private = true)
-            THEN
-              RAISE EXCEPTION 'A Project can only be private while the Owner is a premium User.';
-            ELSE
-              INSERT INTO plenum.UserTable(username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry)
-              VALUES (new.username, new.password, new.email, new.premium, new.banned, new.name, new.gender, new.address, new.institution, new.description, new.birthDate, new.idCountry);
-            END IF;
-            RETURN NEW;
-            END;
-          $BODY$
-          LANGUAGE plpgsql;
-
-          CREATE TRIGGER onUpdateUser BEFORE INSERT OR UPDATE ON plenum.UserTable
-          FOR EACH ROW
-          WHEN (new.premium = false)
-          EXECUTE PROCEDURE plenum.updateUserTable();
-
-        </code>
-      </td>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER09</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>A Project can only have one owner.</td>
     </tr>
   </tbody>
 </table>
 
+```SQL
+CREATE OR REPLACE FUNCTION plenum.onlyOneOwner() RETURNS TRIGGER AS
+$BODY$
+  BEGIN
+  IF EXISTS (
+    SELECT * FROM plenum.Joined
+    WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner')
+  THEN
+    RAISE EXCEPTION 'A Project can only have one owner.';
+  END IF;
+  RETURN NEW;
+  END;
+$BODY$
+LANGUAGE plpgsql;
+
+CREATE TRIGGER onCreateJoined BEFORE INSERT ON plenum.Joined
+FOR EACH ROW
+WHEN (new.role = 'Owner')
+EXECUTE PROCEDURE plenum.onlyOneOwner();
+```
 
 ## 4. Complete SQL Code
 
