Minor fixes to UPDATES

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -596,6 +596,8 @@ This artefact contains the physical schema of the database, the identification a
 
 ### 1.3. Frequent Updates
 
+### 1.3. Frequent Updates
+
 <table>
   <tbody>
     <tr>
@@ -1131,7 +1133,6 @@ WHERE idReply = $idReply;
 DELETE FROM User
 WHERE idUser = $idUser;
 ```
-
 ## 2. Proposed Indices
 ### 2.1. Performance Indices
 
@@ -1175,9 +1176,7 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
-	```SQL
           CREATE INDEX emailUser ON "UserTable" USING hash (email);
-        ```
 	</code>
       </td>
     </tr>
@@ -1223,9 +1222,7 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
-	```SQL
            CREATE INDEX taskUser ON Task USING hash(idUser);
-        ```
 	</code>
       </td>
     </tr>
@@ -1271,9 +1268,7 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
-	```SQL
            CREATE INDEX projectUser ON Project USING hash(idUser);
-        ```
 	</code>
       </td>
     </tr>
@@ -1319,9 +1314,7 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
-	```SQL
            CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);  
-        ```
 	</code>
       </td>
     </tr>
