--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1401,7 +1401,7 @@ CREATE INDEX search_username ON UserTable USING GIN (to_tsvector('english', user
 </table>
 
 ```SQL
-CREATE INDEX search_user_name ON User USING GIN (to_tsvector('english', name));
+CREATE INDEX search_user_name ON UserTable USING GIN (to_tsvector('english', name));
 ```
 
 <table>
