--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1505,7 +1505,7 @@ CREATE INDEX search_project_description ON Project USING GIST (to_tsvector('engl
 </table>
 
 ```SQL
-CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
+CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', title));
 ```
 
 <table>
@@ -1542,7 +1542,7 @@ CREATE INDEX search_task_name ON Task USING GIN (to_tsvector('english', name))
 </table>
 
 ```SQL
-CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', name));
+CREATE INDEX search_task_description ON Task USING GIST (to_tsvector('english', description));
 ```
 
 ## 3. Triggers
