--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1176,7 +1176,7 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
-          CREATE INDEX emailUser ON "UserTable" USING hash (email);
+          CREATE INDEX emailUser ON UserTable USING hash (email);
 	</code>
       </td>
     </tr>
@@ -1241,7 +1241,7 @@ WHERE idUser = $idUser;
     </tr>
     <tr>
       <td><b>Index relation</b></td>
-      <td>Project</td>
+      <td>Joined</td>
     </tr>
     <tr>
       <td><b>Index attribute</b></td>
@@ -1268,7 +1268,7 @@ WHERE idUser = $idUser;
     <tr>
       <td colspan="2">
         <code>
-           CREATE INDEX projectUser ON Project USING hash(idUser);
+           CREATE INDEX projectUser ON Joined USING hash(idUser);
 	</code>
       </td>
     </tr>
