Added sql notation performance indexes

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1173,15 +1173,12 @@ WHERE idUser = $idUser;
 	      cardinality is high because 'email' is an unique key;
 	      not a good candidate for clustering.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-          CREATE INDEX emailUser ON UserTable USING hash (email);
-	</code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX emailUser ON UserTable USING hash (email);
+```
 
 <table>
   <tbody>
@@ -1219,15 +1216,12 @@ WHERE idUser = $idUser;
 	      doesn't need range query support;
 	      cardinality is medium so it's a good candidate for clustering.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-           CREATE INDEX taskUser ON Task USING hash(idUser);
-	</code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX taskUser ON Task USING hash(idUser);
+```
 
 <table>
   <tbody>
@@ -1265,15 +1259,12 @@ WHERE idUser = $idUser;
 	      doesn't need range query support;
 	      cardinality is medium therefor it's a good candidate for clustering.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-           CREATE INDEX projectUser ON Joined USING hash(idUser);
-	</code>
-      </td>
-    </tr>
   </tbody>
 </table>
+
+```SQL
+CREATE INDEX projectUser ON Joined USING hash(idUser);
+```
 
 <table>
   <tbody>
@@ -1311,16 +1302,12 @@ WHERE idUser = $idUser;
 	      It's clustered to allow for quick range queries;
 	      cardinality is medium.</td>
     </tr>
-    <tr>
-      <td colspan="2">
-        <code>
-           CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);  
-	</code>
-      </td>
-    </tr>
   </tbody>
 </table>
 
+```SQL
+CREATE INDEX deadlineTask ON Task USING btree (DEADLINE);  
+```
 ### 2.2. Full-text Search Indices
 
 <table>
